Changes in primecount-7.20, 2025-11-03

* CMakeLists.txt: Support building libprimecount.dll using MinGW.
* pi_gourdon.cpp: Quickly verify pi(x) results.
* pi_deleglise_rivat.cpp: Quickly verify pi(x) results.
* pi_lmo_parallel.cpp: Quickly verify pi(x) results.
* CmdOptions.cpp: Add --double-check option.
* doc/Easy-Special-Leaves.pdf: Converted Markdown to LaTeX.
* doc/Hard-Special-Leaves.pdf: Converted Markdown to LaTeX.
* doc/Partial-Sieve-Function.pdf: Converted Markdown to LaTeX.
* ci.yml: Add WebAssembly/Emscripten test.
* BUILD.md: Add WebAssembly/Emscripten build instructions.
* README.md: Updated Algorithms section.

Changes in primecount-7.19, 2025-06-04

* nth_prime.cpp: Add 128-bit nth_prime function.
* nth_prime_sieve.hpp: New sieving algo for nth_prime(n).
* primecount.h: Improved 128-bit C API using portable pc_int128_t struct.
* primecount.hpp: Improved 128-bit C++ API using portable pc_int128_t struct.
* libprimecount.md: Add new 128-bit C/C++ API functions.

Changes in primecount-7.18, 2025-05-14

* Add CMake find_package(primecount) support.
* libprimecount.md: Add CMake find_package(primecount) section.
* PhiTiny.cpp: Reduce code bloat.
* Move private header files from /include to /src.
* src/CMakeLists.txt: Update for private header files in /src.
* test/CMakeLists.txt: Update for private header files in /src.
* Vector.hpp: Get rid of std::is_trivial which is deprecated in C++26.
* Update to latest primesieve-12.9 library.
* Update to latest libdivide-5.2.0 library.

Changes in primecount-7.17, 2025-04-29

* Sieve_pre_sieve.hpp: Improved pre-sieving using primes ≤ 71.
  Speeds up S2_hard and D algorithms by up to 5%.
* README.md: Fix Markdown math formulas.
* Hard-Special-Leaves.md: Fix Markdown math formulas.
* Update to primesieve-12.8 library.

Changes in primecount-7.16, 2025-03-31

The if check for runtime dispatching to CPU vector instruction
sets has been moved outside of the main loop. This improves