@@ -59,20 +59,20 @@ mkdir build_primesieve
 cd build_primesieve
 clang++ -c -I../../lib/primesieve/include -I../../lib/primesieve/src \
   -O3 -flto -static -Wall -Wextra -pedantic \
-  -DNDEBUG -D_WIN32_WINNT=0x0A00 \
-  ../../lib/primesieve/src/*.cpp
+  -DENABLE_MULTIARCH_ARM_SVE -DNDEBUG -D_WIN32_WINNT=0x0A00 \
+  ../../lib/primesieve/src/*.cpp ../../lib/primesieve/src/arch/arm/sve.cpp
 
 cd ..
 mkdir build_primecount
 cd build_primecount
 clang++ -c -I../../include -I../../src -I../../lib/primesieve/include \
   -O3 -flto -fopenmp -static -Wall -Wextra -pedantic \
-  -DNDEBUG -D_WIN32_WINNT=0x0A00 \
+  -DENABLE_MULTIARCH_ARM_SVE -DNDEBUG -D_WIN32_WINNT=0x0A00 \
   ../../src/*.cpp ../../src/lmo/*.cpp ../../src/deleglise-rivat/*.cpp \
-  ../../src/gourdon/*.cpp ../../src/app/*.cpp
+  ../../src/gourdon/*.cpp ../../src/arch/arm/sve.cpp ../../src/app/*.cpp
 
 cd ..
-clang++ -O3 -flto -fopenmp -static -Wall -Wextra -pedantic -DNDEBUG -D_WIN32_WINNT=0x0A00 \
+clang++ -O3 -flto -fopenmp -static -Wall -Wextra -pedantic -DENABLE_MULTIARCH_ARM_SVE -DNDEBUG -D_WIN32_WINNT=0x0A00 \
   build_primesieve/*.o build_primecount/*.o -o primecount -lPsapi
 
 strip primecount.exe
